grammar.output
Terminals which are not used

   T_BLOCK
   T_ROOT
   T_MECH
   T_TRAIT
   T_TRAITS
   T_ERR
   '='
   '<'
   '>'
   T_NEQ
   T_EQ
   T_LTEQ
   T_GTEQ
   T_SR
   T_SL
   '+'
   '-'
   '*'
   '/'
   '%'
   '!'
   T_NEG
   T_POS
   '['
   '('


Grammar

    0 $accept: program $end

    1 program: mech

    2 mech: '{' traits '}'
    3     | '{' traits ';' '}'
    4     | '{' '}'

    5 traits: traits ';' trait
    6       | traits error ';'
    7       | trait

    8 trait: '.' tname ':' expr

    9 tname: T_IDENT
   10      | T_I32
   11      | T_F32

   12 expr: con

   13 con: T_INTCON
   14    | T_FLOATCON


Terminals, with rules where they appear

$end (0) 0
'!' (33)
'%' (37)
'(' (40)
'*' (42)
'+' (43)
'-' (45)
'.' (46) 8
'/' (47)
':' (58) 8
';' (59) 3 5 6
'<' (60)
'=' (61)
'>' (62)
'[' (91)
'{' (123) 2 3 4
'}' (125) 2 3 4
error (256) 6
T_BLOCK (258)
T_IDENT (259) 9
T_I32 (260) 10
T_F32 (261) 11
T_INTCON (262) 13
T_FLOATCON (263) 14
T_ROOT (264)
T_MECH (265)
T_TRAIT (266)
T_TRAITS (267)
T_ERR (268)
T_NEQ (269)
T_EQ (270)
T_LTEQ (271)
T_GTEQ (272)
T_SR (273)
T_SL (274)
T_NEG (275)
T_POS (276)


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
program (39)
    on left: 1, on right: 0
mech (40)
    on left: 2 3 4, on right: 1
traits (41)
    on left: 5 6 7, on right: 2 3 5 6
trait (42)
    on left: 8, on right: 5 7
tname (43)
    on left: 9 10 11, on right: 8
expr (44)
    on left: 12, on right: 8
con (45)
    on left: 13 14, on right: 12


state 0

    0 $accept: . program $end

    '{'  shift, and go to state 1

    program  go to state 2
    mech     go to state 3


state 1

    2 mech: '{' . traits '}'
    3     | '{' . traits ';' '}'
    4     | '{' . '}'

    '.'  shift, and go to state 4
    '}'  shift, and go to state 5

    traits  go to state 6
    trait   go to state 7


state 2

    0 $accept: program . $end

    $end  shift, and go to state 8


state 3

    1 program: mech .

    $default  reduce using rule 1 (program)


state 4

    8 trait: '.' . tname ':' expr

    T_IDENT  shift, and go to state 9
    T_I32    shift, and go to state 10
    T_F32    shift, and go to state 11

    tname  go to state 12


state 5

    4 mech: '{' '}' .

    $default  reduce using rule 4 (mech)


state 6

    2 mech: '{' traits . '}'
    3     | '{' traits . ';' '}'
    5 traits: traits . ';' trait
    6       | traits . error ';'

    error  shift, and go to state 13
    '}'    shift, and go to state 14
    ';'    shift, and go to state 15


state 7

    7 traits: trait .

    $default  reduce using rule 7 (traits)


state 8

    0 $accept: program $end .

    $default  accept


state 9

    9 tname: T_IDENT .

    $default  reduce using rule 9 (tname)


state 10

   10 tname: T_I32 .

    $default  reduce using rule 10 (tname)


state 11

   11 tname: T_F32 .

    $default  reduce using rule 11 (tname)


state 12

    8 trait: '.' tname . ':' expr

    ':'  shift, and go to state 16


state 13

    6 traits: traits error . ';'

    ';'  shift, and go to state 17


state 14

    2 mech: '{' traits '}' .

    $default  reduce using rule 2 (mech)


state 15

    3 mech: '{' traits ';' . '}'
    5 traits: traits ';' . trait

    '.'  shift, and go to state 4
    '}'  shift, and go to state 18

    trait  go to state 19


state 16

    8 trait: '.' tname ':' . expr

    T_INTCON    shift, and go to state 20
    T_FLOATCON  shift, and go to state 21

    expr  go to state 22
    con   go to state 23


state 17

    6 traits: traits error ';' .

    $default  reduce using rule 6 (traits)


state 18

    3 mech: '{' traits ';' '}' .

    $default  reduce using rule 3 (mech)


state 19

    5 traits: traits ';' trait .

    $default  reduce using rule 5 (traits)


state 20

   13 con: T_INTCON .

    $default  reduce using rule 13 (con)


state 21

   14 con: T_FLOATCON .

    $default  reduce using rule 14 (con)


state 22

    8 trait: '.' tname ':' expr .

    $default  reduce using rule 8 (trait)


state 23

   12 expr: con .

    $default  reduce using rule 12 (expr)
